--- a/meccsek.html
+++ b/meccsek.html
@@ -1658,29 +1658,27 @@ async function updateTooltipData() {
             return;
         }
 
-        // 1. MAI NAP (Helyi idő szerint)
+        // --- DINAMIKUS MAI DÁTUM (Helyi idő szerint) ---
         const now = new Date();
-        const startOfToday = new Date(now.getFullYear(), now.getMonth(), now.getDate()).getTime();
-        const endOfToday = startOfToday + 24 * 60 * 60 * 1000;
+        const y = now.getFullYear();
+        const m = String(now.getMonth() + 1).padStart(2, '0');
+        const d = String(now.getDate()).padStart(2, '0');
+        const localToday = `${y}-${m}-${d}`; // Eredmény: "2026-02-24"
 
-        // 2. SZŰRÉS (Időbélyeg alapú összehasonlítás)
+        // --- SZŰRÉS ---
         const dailyBets = bets.filter(bet => {
             if (!bet.created_at) return false;
-            
-            // A Supabase stringet (szóközöst is) dátummá alakítjuk
-            // Kicseréljük a szóközt 'T'-re, hogy a JS dátumkezelője biztosan szeresse
-            const isoString = bet.created_at.replace(' ', 'T');
-            const betDate = new Date(isoString).getTime();
-            
-            return betDate >= startOfToday && betDate < endOfToday;
+            // Kivágjuk a "2026-02-24" részt a string elejéről
+            const betDateOnly = bet.created_at.substring(0, 10);
+            return betDateOnly === localToday;
         });
 
         if (dailyBets.length === 0) {
-            body.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:10px; color:#aaa;">Mára még nem tippeltél.</td></tr>';
+            body.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:15px; color:#888;">Mára még nem tippeltél.</td></tr>';
             return;
         }
 
-        // 3. MEGJELENÍTÉS
+        // --- MEGJELENÍTÉS ---
         body.innerHTML = dailyBets.slice(0, 6).map(bet => {
             const statusColor = bet.status === 'WON' ? '#00ff99' : (bet.status === 'LOST' ? '#ff4d4d' : '#ccc');
             return `
@@ -1688,7 +1686,7 @@ async function updateTooltipData() {
                     <td style="max-width: 130px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding: 6px 0;">
                         ${bet.team_name}
                     </td>
-                    <td style="color: var(--neon-blue); font-weight: bold; text-align: center; padding: 0 5px;">
+                    <td style="color: var(--neon-blue); font-weight: bold; text-align: center;">
                         ${bet.type}
                     </td>
                     <td style="text-align: right; font-family: 'Orbitron'; font-weight: bold; color: ${statusColor};">
@@ -1699,7 +1697,7 @@ async function updateTooltipData() {
         }).join('');
 
     } catch (err) {
-        console.error("Dátum hiba:", err);
+        console.error("Végzetes dátum hiba:", err);
         body.innerHTML = '<tr><td colspan="3" style="text-align:center; color: red;">Hiba történt...</td></tr>';
     }
 }
@@ -1708,6 +1706,7 @@ initSexyTooltip();
     </script>
 </body>
 </html>
+
 
 
 
